# kaggle-pandas-tutorial

with-poetry-setup/: pyproject.toml
with-poetry-setup/kaggle/: exercise-01.ipynb  exercise-02.ipynb  exercise-03.ipynb  exercise-04.ipynb
with-poetry-setup/kaggle/.ipynb_checkpoints/: exercise-01-checkpoint.ipynb  exercise-02-checkpoint.ipynb  exercise-03-checkpoint.ipynb
with-poetry-setup/kaggle/data/: cows_and_goats
with-poetry-setup/with_poetry_setup/: example.ipynb
with-poetry-setup/with_poetry_setup/.ipynb_checkpoints/: example-checkpoint.ipynb
