[tool.poetry]
name = "with-poetry-setup"
version = "0.1.0"
description = ""
authors = ["alexcupit <alexcupit@outlook.com>"]
readme = "README.md"
packages = [{include = "with_poetry_setup"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
ipykernel = "^6.23.0"
numpy = "^1.24.3"
pyarrow = "^12.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
